base/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: ebdn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - image: quay.tdl.devu.ca:8443/images/http-custom:latest
          name: webserver
          ports:
            - containerPort: 8080
              protocol: TCP
