base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: ebdn
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: webserver
  type: ClusterIP
